[package]
name = "todo"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"
